--- a/add.html
+++ b/add.html
@@ -1,24 +1,69 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
 </head>
+
 <body>
-    <form id="Signup">
+    <form id="dataadd">
         <input type="text" id="f_name" , placeholder="Enter First Name Here" required>
-       <input type="text" id="l_name" , placeholder="Enter Last Name Here" required>
-       <input type="email" id="email" , placeholder="Enter Email Here" required> 
-       <input type="number" id="Salary" , placeholder="Enter Salary Here" required> 
-       <select name="" id="">
-        <option value="">Department</option>
-        <option value="Tech">Tech</option>
-        <option value="Marketing">Marketing</option>
-        <option value="Marketing">Operations </option>
-       </select>
-       <input type="date" id="email" required> <br>
-       <button type="submit" class="btn">Add Employee</button>
-   </form>
+        <input type="text" id="l_name" , placeholder="Enter Last Name Here" required>
+        <input type="email" id="email" , placeholder="Enter Email Here" required>
+        <input type="number" id="Salary" , placeholder="Enter Salary Here" required>
+        <select name="" id="department">
+            <option value="">Department</option>
+            <option value="Tech">Tech</option>
+            <option value="Marketing">Marketing</option>
+            <option value="Marketing">Operations </option>
+        </select>
+        <input type="date" id="date" required> <br>
+        <input type="Submit" class="submit" id="submit">
+    </form>
 </body>
+
 </html>
+
+<script>
+    let dataadd = document.querySelector("form");
+
+    let users = JSON.parse(localStorage.getItem("usersData")) || [];
+
+
+    dataadd.addEventListener("submit", (e) => {
+        e.preventDefault();
+        add();
+        alert("Data added successfully")
+        setTimeout(() => {
+            window.location.href = "dashboard.html";
+        }, 1000);
+    });
+
+    function add() {
+        let userObj = {
+            f_name: dataadd.f_name.value,
+            l_name: dataadd.l_name.value,
+            Salary: dataadd.Salary.value,
+            email: dataadd.email.value,
+            department: dataadd.department.value
+        };
+        console.log(userObj);
+        fetch(`https://employee-app-jo84.onrender.com/api/employee`, {
+            method: "POST",
+            body: JSON.stringify(userObj),
+            headers: {
+                "Content-type": "application/json",
+            },
+        })
+            .then((res) => res.json())
+            .then((data) => {
+                console.log(data);
+            });
+    }
+
+
+
+
+</script>
